--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -1,6 +1,5 @@
 .landing-page {
-  margin: 0;
-  padding: 0;
+  position: fixed;
   background-image: url('http://localhost:8080/api/photos/land.png');
   background-size: cover;
   background-position: center;
