--- a/src/components/FavouriteActivities.css
+++ b/src/components/FavouriteActivities.css
@@ -9,7 +9,7 @@
 
 .list-item {
   font-size: 16px;
-  font-family: Arial;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   margin: 5px 0;
   cursor: pointer;
 }
@@ -23,18 +23,19 @@
 }
 
 .heading {
-  font-size: 20px;
-  font-family: Helvetica;
-  text-decoration: underline;
+  font-size: 40px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  color: #194759;
 }
 
 .listItem {
-  font-size: 16px;
-  font-family: Helvetica;
+  font-size: 26px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   margin: 5px 0;
   cursor: pointer;
   display: flex;
   align-items: center;
+  color:#194759
 }
 
 .listItem:hover,
@@ -46,7 +47,7 @@
   width: 10px;
   height: 10px;
   border-radius: 50%;
-  background-color: #194759;
+  background-color: white;
   display: flex;
   justify-content: center;
   align-items: center;
