history, psychological exam

--- a/src/components/History.css
+++ b/src/components/History.css
@@ -6,10 +6,14 @@
   
 }
 
-.table-container th,
+.table-container th{
+  padding: 8px;
+  border: 1px solid #ccc;
+}
 .table-container td {
   padding: 8px;
   border: 1px solid #ccc;
+  color: #194759;
 }
 
 .table-container thead {
@@ -17,7 +21,7 @@
 }
 
 .table-container tbody tr:nth-child(even) {
-  background-color: #f9f9f9;
+  background-color: #d7f0f1;
 }
 
 .table-container tbody tr:hover {
