--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -7,6 +7,14 @@
     justify-content: space-between;
     width: 100vw;
 }
-.verify-button{
-    margin-left: 170px;
-}
+.eval-button{
+    background-color:  #194759;
+    color:white;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: medium;
+    align-self: center;
+    width: 100px;
+    height: 40px;
+    border-radius: 12px;
+    margin-left: 180px;
+  }
